--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 
                  <div style="float: left; margin: auto;width: 100px; height: 50px" class="qodef-logo-wrapper">
 
-<a style="font-size: xx-large;float: right;padding-top: 10px;width: auto; " class=" navbar-header navbar-brand" style="margin:auto; display: inline; background-color: transparent" href="index.html">        
+<a style="font-size: xx-large;float: right;padding-top: 10px;width: 100px; height: 50px " class="navbar-header " style="margin:auto; display: inline; background-color: transparent" href="index.html">        
 
 Bingwa<strong style="color: rgb(126, 247, 6);">Safaris</strong>
 
