index.html updated commits.

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@ Bingwa<strong style="color: rgb(126, 247, 6);">Safaris</strong>
 
                                                                     </div>
 
-                                                                    <div style="background-color: rgb(107, 74, 74); vertical-align: bottom; ; " class="w3-half w3-container">
+                                                                    <div style="vertical-align: bottom;  " class="w3-half w3-container">
                                                                       
                                                                          <div style="text-align: left;;width: auto;height: auto;">
                                                                              
