index.html commits.

--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@ Bingwa<strong style="color: rgb(126, 247, 6);">Safaris</strong>
                                              
                                              <section style="height: auto;width: 100%; background-color: #222222 ;">
                                                       
-                                                        <div  id="divAgency" style="display:none; color: #eafccf;" class="parallax-image-2 ">
+                                                        <div  id="divAgency" style="display:none; color: #eafccf;" class=" ">
 
                                                         <h2 style="color: #eafccf; text-align: center;">
                                                              Explore Our Safaris                                                                                                                              
