--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@
                                   text-align: center;
                                   font-size: 28px;
                                   padding: auto;
-                                  width: auto;
-                                  height: 50px;
+                                  width: 100%;
+                                  height: auto;
                                   transition: all 0.5s;
                                   cursor: pointer;
                                   margin: 5px;
