--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Header -->
 <div class="w3-container w3-center w3-padding-32"> 
-  <h1><b>MY BLOG</b></h1>
+  <h1><b> 
+      <a id="name" style="font-size: xx-large;padding-top: 10px;width: 100px; height: 50px " class="navbar-header " style="margin:auto; display: inline; background-color: transparent" href="index.html">        
+
+          Bingwa<strong style="color: rgb(126, 247, 6);">Safaris</strong>
+          
+          </a>
+  </b></h1>
   <p>Welcome to the blog of <span class="w3-tag">unknown</span></p>
 </div>
 
