--- a/index.html
+++ b/index.html
@@ -4059,12 +4059,12 @@ Kenya has a wealth of breathtaking sites to view. Plan your vacations with us as
                     <a class="qodef-icon-widget-holder" href="" target="_blank" style="padding-left: 10px; margin: 0 20px 0 0">
                         <span class="qodef-icon-element icon_pin_alt" style="font-size: 14px">
                         </span>				
-                        <span class="qodef-icon-text ">
+                        <span class="qodef-icon-text; font-style: italic; ">
                             Meru Maua Road, <strong style="padding-left: 20px;">28 KM From Meru national park</strong>
                         </span>
                          <span class="qodef-icon-text ">
                                 <h4 style="color: #020202;"><strong style="padding-left: 12px;">Getting there</strong></h4> <br>
-                                 <strong style="padding-left: 20px;">BY ROAD. Please use Google Maps for directions</strong>
+                                 <strong style="padding-left: 20px;font-style: italic; ">BY ROAD. Please use Google Maps for directions</strong>
                             </span>            
                     </a>
                  </div>
