--- a/index.html
+++ b/index.html
@@ -3948,7 +3948,7 @@ Kenya has a wealth of breathtaking sites to view. Plan your vacations with us as
                                     <tr>
 
                                       <td style="color: #222222; background-color: #cdd4ce; ">
-                                         <strong>300ksh</strong>
+                                         <strong>3000ksh</strong>
                                       </td>
                                     </tr>
                                     <tr>
@@ -3993,7 +3993,7 @@ Kenya has a wealth of breathtaking sites to view. Plan your vacations with us as
                                     </tr>
                                     <tr>
                                       <td style="color: #222222; background-color: #cdd4ce; ">
-                                            <strong>9</strong> ,, children below five years is free,,, but this package applies to those in MERU TOWN and MAUA TOWN,,
+                                            <strong>9</strong> ,, children below three years is free,,, but this package applies to those in MERU TOWN and MAUA TOWN,,
                                       </td>
                                      
                                     </tr> 
