updated modifications commits.

--- a/index.html
+++ b/index.html
@@ -3486,7 +3486,7 @@ Bingwa<strong style="color: rgb(126, 247, 6);">Safaris</strong>
 
                                       <div id="portfolio" class="" style="text-align: center; ">
 
-                                            <h2 style="background-color: #aaa;">Discover the famous <strong>Magado Crater</strong></h2>
+                                            <h2 class="qodef-st-tagline" style="background-color: #aaa;font-family:Satisfy,cursive">Discover the famous <strong>Magadi Crater</strong></h2>
                                             <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
                                                 
                                               <!-- Indicators -->
